Save without Predict

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #database
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://yyn9704kr.ipdisk.co.kr:3306/lotto?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.hikari.jdbc-url=jdbc:mysql://yyn9704kr.ipdisk.co.kr:3306/lotto?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
 spring.datasource.hikari.username=lotto
 spring.datasource.hikari.password=1234
 spring.jpa.database=mysql
